[FLINK-25002][build] Add java 17 add-opens/add-exports JVM arguments